compiler/driver/tests/snapshots/codegen_snapshots__snap_return_value.snap
---
source: compiler/driver/tests/codegen_snapshots.rs
expression: normalize_ir(& ir)
---
source_filename = "test.ny"
target triple = "arm64-apple-darwin"

@.str.N = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

declare i32 @printf(ptr, ...)
declare void @abort()
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define i32 @add(i32 %0, i32 %1) {
entry:
  %bin.N = add i32 %0, %1
  ret i32 %bin.N
}
define i32 @main() {
entry:
  %call.N = call i32 @add(i32 3, i32 4)
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, i32 %call.N)
  ret i32 0
}
