compiler/driver/tests/snapshots/codegen_snapshots__snap_string_trim.snap
---
source: compiler/driver/tests/codegen_snapshots.rs
expression: normalize_ir(& ir)
---
source_filename = "test.ny"
target triple = "arm64-apple-darwin"

@.str.0 = private unnamed_addr constant [7 x i8] c"  hi  \00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1


declare i32 @printf(ptr, ...)
declare void @abort()
declare ptr @str_trim(ptr)
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)
define i32 @main() {
entry:
  %str.0 = getelementptr inbounds i8, ptr @.str.0, i64 0
  %trim.1 = call ptr @str_trim(ptr %str.0)
  %fmt.2 = getelementptr inbounds i8, ptr @.str.1, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.2, ptr %trim.1)
  ret i32 0
}
